# talks

./: README.md
pycon_2025/: Local_LLM_fine_tuning_a_practical_example.ipynb
pycon_2025/code/: Local_LLM_fine_tuning_a_practical_example.ipynb  company_internal_processes_en.jsonl  new.ipynb
pycon_2026/code/: .env.example  .gitignore  README.md  app.py  bertTopic_utilities.py  config.py  core.py  hyperparams_optimization.py  prompt_bertopic_label_generation.py  pyproject.toml  requirements.txt  streamlit_fe_app.py
pydata_roma_capitale_2025/code/: 1_multi-agent_conversation_romaLazio.ipynb  2_Sequential_Chats_and_Customer_Onboarding.ipynb  3_Planning_and_BitcoinOpening_Report_Generation.ipynb  requirements.txt  utils.py
pydata_roma_capitale_2025/code/code2/: bitcoin_market_analysis.md  tmp_code_22a3cb1181356fdacc1fad9ed3e03274.py  tmp_code_6f53ee59ba9e11231f211af887a751bb.py
